[project]
name = "gemma3-cpt"
version = "0.1.0"
description = "Continual pre-training for Gemma3 12B with multimodal capabilities"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1",
    "flash-attn==2.8.3",
    "transformers>=4.44.0",
    "datasets",
    "accelerate",
    "deepspeed",
    "wandb",
    "tqdm",
    "sentencepiece",
    "protobuf",
    "pillow",
    "torchvision",
    "einops",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
    "pytest",
]